--- a/assets/css/color-base.scss
+++ b/assets/css/color-base.scss
@@ -1,3 +1,8 @@
 :root {
   --gw-main-color: #7fff00;
+  --gw-deep-color: #3e7d00;
+
+  --gw-border-color: #e9f5db;
+
+  --gw-hover-color: #f6faf3;
 }
